--- a/config/database.yml
+++ b/config/database.yml
@@ -25,13 +25,13 @@ development:
   <<: *default
   database: recipedb
 
-  username: admin
-  password: coding
-  host: localhost
-  port: 5432
+  # username: admin
+  # password: coding
+  # host: localhost
+  # port: 5432
 
-  # username: steel
-  # password: bett254
+  username: steel
+  password: bett254
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -48,8 +48,8 @@ development:
 test:
   <<: *default
   database: recipedb
-  # username: steel
-  # password: bett254
+  username: steel
+  password: bett254
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
