--- a/config/database.yml
+++ b/config/database.yml
@@ -30,6 +30,7 @@ development:
   host: localhost
   port: 5432
 
+  # database: food_recipe
   # username: steel
   # password: bett254
 
@@ -47,7 +48,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: recipedb
+  # database: food_recipe
   # username: steel
   # password: bett254
 # As with config/credentials.yml, you never want to store sensitive information,
